test/zinc_source/compile_errors/functions/10_named_collection_method.zn
// expected-error: array\.push\(\) does not accept named arguments

fn main() {
    values = []
    values.push(value=1)
}
